--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -7,7 +7,7 @@ const {t, path} = useLocale(Astro.url)
 
 <footer class="mt-12 mb-6 text-sm">
 
-    <div class="mb-1">
+    <!-- <div class="mb-1">
         {footer &&
             footer.map((item, index) => (
                     <span>
@@ -18,7 +18,7 @@ const {t, path} = useLocale(Astro.url)
 
             ))
         }
-    </div>
+    </div> -->
     <div class="mb-1">
         <span>{start}-{new Date().getFullYear()}</span>
     </div>
