--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -24,9 +24,9 @@ const {t, path} = useLocale(Astro.url)
     </div>
     <div class="text-sm">
         {t('footer.built-with')}
-        <a class="panda-link italic" href="https://astro.build/">astro</a>, {t('footer.inspired-by')}<a
-            class="panda-link italic ml-1"
-            href="https://bearblog.dev/">bearblog</a
+        <a class="panda-link" href="https://astro.build/">Astro</a>, {t('footer.inspired-by')}<a
+            class="panda-link ml-1"
+            href="https://bearblog.dev/">Bearblog</a
     >.
     </div>
 </footer>
